# seameet

./: .dockerignore  CLAUDE.md  Cargo.toml  README.md
crates/seameet/: Cargo.toml
crates/seameet-codec/: Cargo.toml
crates/seameet-codec/src/: lib.rs  passthrough.rs
crates/seameet-codec/src/audio/: mod.rs
crates/seameet-codec/src/video/: mod.rs
crates/seameet-core/: Cargo.toml
crates/seameet-core/src/: error.rs  events.rs  frame.rs  lib.rs  participant.rs  track.rs  traits.rs
crates/seameet-pipeline/: Cargo.toml
crates/seameet-pipeline/src/: inbound.rs  lib.rs  outbound.rs  peer.rs  peer_connection.rs  processor.rs
crates/seameet-rtp/: Cargo.toml
crates/seameet-rtp/src/: jitter.rs  lib.rs  packet.rs  rtcp.rs  sender.rs
crates/seameet-sfu/: Cargo.toml
crates/seameet-sfu/src/: lib.rs  media.rs
crates/seameet-signaling/: Cargo.toml
crates/seameet-signaling/src/: engine.rs  lib.rs  message.rs  room_server.rs  traits.rs  transport.rs  ws.rs  ws_listener.rs
crates/seameet/src/: lib.rs  room.rs  server.rs  server_event.rs
crates/seameet/tests/: integration.rs
examples/browser-demo/: Cargo.toml  README.md
examples/browser-demo/src/: main.rs
examples/browser-demo/static/: index.html
examples/meet/: Cargo.toml
examples/meet/frontend/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
examples/meet/frontend/e2e/: audio-mute.spec.ts  camera-toggle.spec.ts  multi-participant-camera.spec.ts  screen-share.spec.ts  video-config.spec.ts  video-flow.spec.ts
examples/meet/frontend/e2e/helpers/: room.ts
examples/meet/frontend/src/: App.tsx  types.ts
examples/meet/frontend/src/__tests__/: setup.ts
examples/meet/frontend/src/__tests__/components/: ControlBar.test.tsx  VideoGrid.test.tsx  VideoTile.test.tsx
examples/meet/frontend/src/__tests__/context/: CallContext.test.ts
examples/meet/frontend/src/__tests__/helpers/: test-ctx.ts
examples/meet/frontend/src/__tests__/hooks/: useE2EE.test.ts  useMediaDevices.test.ts  useSignaling.test.ts  useWebRTC.test.ts
examples/meet/frontend/src/__tests__/mocks/: mock-media.ts  mock-rtc.ts  mock-websocket.ts
examples/meet/frontend/src/__tests__/workers/: e2ee-worker.test.ts
examples/meet/frontend/src/components/: ChatPanel.tsx  ControlBar.tsx  ErrorBoundary.tsx  SafetyNumberPanel.tsx  VideoGrid.tsx  VideoSettingsPopover.tsx  VideoTile.tsx
examples/meet/frontend/src/context/: CallContext.tsx
examples/meet/frontend/src/hooks/: useE2EE.ts  useMediaDevices.ts  useSignaling.ts  useWebRTC.ts
examples/meet/frontend/src/lib/: e2ee-support.ts
examples/meet/frontend/src/pages/: LobbyPage.tsx  RoomPage.tsx
examples/meet/frontend/src/styles/: global.css
examples/meet/frontend/src/workers/: e2ee-crypto.ts  e2ee-worker.ts
examples/meet/server/: Dockerfile  main.rs  sfu.rs
