[package]
name = "seameet-rtp"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
seameet-core = { path = "../seameet-core" }
tokio        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
ringbuf      = { workspace = true }
rand         = { workspace = true }
bytes        = "1"

[dev-dependencies]
tokio = { workspace = true }
