[package]
name = "seameet-signaling"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
default = ["tungstenite"]
tungstenite = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
seameet-core       = { path = "../seameet-core" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tokio-tungstenite  = { version = "0.21", optional = true }
futures-util       = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true }
uuid  = { workspace = true }
