[package]
name        = "seameet"
version     = "0.1.0"
edition     = "2021"
description = "Real-time audio/video peer for WebRTC — receive, process, re-emit"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/yourname/seameet"
keywords    = ["webrtc", "audio", "video", "real-time", "tokio"]
categories  = ["multimedia", "network-programming", "asynchronous"]

[dependencies]
seameet-core      = { path = "../seameet-core" }
seameet-signaling = { path = "../seameet-signaling" }
seameet-rtp       = { path = "../seameet-rtp" }
seameet-codec     = { path = "../seameet-codec" }
seameet-pipeline  = { path = "../seameet-pipeline" }
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tracing           = { workspace = true }

[features]
default  = []
opus-ffi = ["seameet-codec/opus-ffi"]
vp8-ffi  = ["seameet-codec/vp8-ffi"]

[dev-dependencies]
tokio         = { workspace = true }
async-trait   = { workspace = true }
seameet-rtp   = { path = "../seameet-rtp" }
seameet-pipeline = { path = "../seameet-pipeline" }
tokio-stream  = { workspace = true }
