[package]
name    = "browser-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "browser-demo"
path = "src/main.rs"

[dependencies]
seameet             = { path = "../../crates/seameet" }
tokio               = { workspace = true }
tokio-tungstenite   = "0.21"
tracing             = { workspace = true }
tracing-subscriber  = "0.3"
axum                = "0.7"
serde_json          = { workspace = true }
uuid                = { workspace = true }
futures-util        = "0.3"
