[package]
name    = "meet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "meet"
path = "server/main.rs"

[dependencies]
seameet             = { path = "../../crates/seameet", features = ["tungstenite", "sfu"] }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
